--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- START NAV -->
+
+    <!-- END NAV -->
+
+    <!-- START HEADER-->
+
+    <!-- END HEADER-->
+
+    <!-- START MAIN-->
+
+    <!-- END MAIN-->
+
+    <!-- START FOOTER -->
+
+    <!-- END FOOTER -->
+
     <script src="script.js"></script>
   </body>
 </html>
