main & footer html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,67 @@
     <!-- END HEADER-->
 
     <!-- START MAIN-->
-
+    <main class="main">
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+      <div class="main__item">
+        <h2 class="main__item-title"></h2>
+        <h3 class="main__item-tag"></h3>
+      </div>
+    </main>
     <!-- END MAIN-->
 
     <!-- START FOOTER -->
-
+    <footer class="footer">
+      <ul class="footer__list">
+        <li class="footer__list-item"></li>
+        <li class="footer__list-item"></li>
+        <li class="footer__list-item"></li>
+        <li class="footer__list-item"></li>
+      </ul>
+    </footer>
     <!-- END FOOTER -->
 
     <script src="script.js"></script>
