html, css modified

--- a/index.html
+++ b/index.html
@@ -7,9 +7,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- START NAV -->
+    <!--START NAV -->
+
+
+
+    <nav>
+      <img src="" alt="" ><img>
+      <ul>
+        <li><a href="https://www.facebook.com/Techiteasybxl">Facebook</a></li>
+        <li><a href="https://twitter.com/Techiteasybxl"> twitter</a></li>
+        <li><a href="http://">Instagram</a></li>
+      </ul>
+    </nav>
 
     <!-- END NAV -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- START HEADER-->
 
