--- a/index.html
+++ b/index.html
@@ -24,56 +24,50 @@
     <!-- START MAIN-->
     <main class="main">
       <div class="main__item main__item-large red">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
+        <div class="main__item-tags">
+          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#Tag</h3>
+        </div>
       </div>
-      <div class="main__item main__item-large main__item-placeholder">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
-      </div>
-      <div class="main__item main__item-placeholder">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
-      </div>
+      <div class="main__item main__item-large main__item-placeholder"></div>
+      <div class="main__item main__item-placeholder"></div>
       <div class="main__item yellow">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
       </div>
       <div class="main__item blue">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
       </div>
       <div class="main__item green">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
       </div>
       <div class="main__item main__item-large red">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
+        <div class="main__item-tags">
+          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#Tag</h3>
+        </div>
       </div>
       <div class="main__item yellow">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
       </div>
-      <div class="main__item main__item-placeholder">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
-      </div>
-      <div class="main__item main__item-horizontal main__item-placeholder">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
-      </div>
+      <div class="main__item main__item-placeholder"></div>
+      <div class="main__item main__item-horizontal main__item-placeholder"></div>
       <div class="main__item blue">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
       </div>
       <div class="main__item green">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
       </div>
       <div class="main__item main__item-large red">
-        <h2 class="main__item-title"></h2>
-        <h3 class="main__item-tag"></h3>
+        <h2 class="main__item-title">Here is a title!</h2>
+        <div class="main__item-tags">
+          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#Tag</h3>
+        </div>
       </div>
     </main>
     <!-- END MAIN-->
