--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech it Easy</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.0/css/all.css"
       integrity="sha384-OLYO0LymqQ+uHXELyx93kblK5YIS3B2ZfLGBmsJaUyor7CpMTBsahDHByqSuWW+q"
@@ -23,7 +27,7 @@
 
     <!-- START MAIN-->
     <main class="main">
-      <div class="main__item main__item-large red">
+      <div id="article-1" class="main__item main__item-large">
         <h2 class="main__item-title">Here is a title!</h2>
         <div class="main__item-tags">
           <h3 class="main__item-tag">#Tag</h3>
@@ -33,16 +37,16 @@
       </div>
       <div class="main__item main__item-large main__item-placeholder"></div>
       <div class="main__item main__item-placeholder"></div>
-      <div class="main__item yellow">
+      <div id="article-2" class="main__item">
         <h2 class="main__item-title">Here is a title!</h2>
       </div>
-      <div class="main__item blue">
+      <div id="article-3" class="main__item">
         <h2 class="main__item-title">Here is a title!</h2>
       </div>
-      <div class="main__item green">
+      <div id="article-4" class="main__item">
         <h2 class="main__item-title">Here is a title!</h2>
       </div>
-      <div class="main__item main__item-large red">
+      <div id="article-5" class="main__item main__item-large">
         <h2 class="main__item-title">Here is a title!</h2>
         <div class="main__item-tags">
           <h3 class="main__item-tag">#Tag</h3>
@@ -50,18 +54,18 @@
           <h3 class="main__item-tag">#Tag</h3>
         </div>
       </div>
-      <div class="main__item yellow">
+      <div id="article-6" class="main__item">
         <h2 class="main__item-title">Here is a title!</h2>
       </div>
       <div class="main__item main__item-placeholder"></div>
       <div class="main__item main__item-horizontal main__item-placeholder"></div>
-      <div class="main__item blue">
+      <div id="article-7" class="main__item">
         <h2 class="main__item-title">Here is a title!</h2>
       </div>
-      <div class="main__item green">
+      <div id="article-8" class="main__item">
         <h2 class="main__item-title">Here is a title!</h2>
       </div>
-      <div class="main__item main__item-large red">
+      <div id="article-9" class="main__item main__item-large">
         <h2 class="main__item-title">Here is a title!</h2>
         <div class="main__item-tags">
           <h3 class="main__item-tag">#Tag</h3>
@@ -75,10 +79,10 @@
     <!-- START FOOTER -->
     <footer class="footer">
       <ul class="footer__list">
-        <li class="footer__list-item"></li>
-        <li class="footer__list-item"></li>
-        <li class="footer__list-item"></li>
-        <li class="footer__list-item"></li>
+        <li class="footer__list-item"><a href="#">FAQ</a></li>
+        <li class="footer__list-item"><a href="#">Contact</a></li>
+        <li class="footer__list-item"><a href="#">Cookies</a></li>
+        <li class="footer__list-item"><a href="#">Copyright</a></li>
       </ul>
     </footer>
     <!-- END FOOTER -->
