--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <!-- END NAV -->
 
     <!-- START HEADER-->
-
+    <header class="header">
+      <img class="header__logo" src="Logo_PNGJAUNE.png" alt="">
+      <div class="header__title">
+        <h1 class="header__title-H1-color header__title_box1"> Main Article Title </h1>
+        <h3 class="header__title-H3-color header__title_box2"> #TAG #TAG1 #TAG2</h3>
+      </div>
+    </header>
     <!-- END HEADER-->
 
     <!-- START MAIN-->
