--- a/index.html
+++ b/index.html
@@ -23,64 +23,66 @@
 
     <!-- START HEADER-->
     <header class="header">
-      <img class="header__logo" src="assets/Logo_PNGJAUNE.png" alt="">
+      <img class="header__logo" src="assets/Logo_PNGJAUNE.png" alt="" />
       <div class="header__title">
-        <h1 class="header__title-H1-color header__title_box1"> Main Article Title </h1>
-        <h3 class="header__title-H3-color header__title_box2"> #TAG #TAG1 #TAG2</h3>
+        <h1 class="header__title-H1-color header__title_box1">Main Article Title</h1>
+        <h3 class="header__title-H3-color header__title_box2">#TAG #TAG1 #TAG2</h3>
       </div>
     </header>
     <div class="header__brackground"></div>
     <!-- END HEADER-->
 
     <!-- START MAIN-->
-    <main class="main">
-      <div id="article-1" class="main__item main__item-large">
-        <h2 class="main__item-title">Here is a title!</h2>
-        <div class="main__item-tags">
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
+    <div class="main__wrapper">
+      <main class="main">
+        <div id="article-1" class="main__item main__item-large">
+          <h2 class="main__item-title">Here is a title!</h2>
+          <div class="main__item-tags">
+            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Tag</h3>
+          </div>
         </div>
-      </div>
-      <div class="main__item main__item-large main__item-placeholder"></div>
-      <div class="main__item main__item-placeholder"></div>
-      <div id="article-2" class="main__item">
-        <h2 class="main__item-title">Here is a title!</h2>
-      </div>
-      <div id="article-3" class="main__item">
-        <h2 class="main__item-title">Here is a title!</h2>
-      </div>
-      <div id="article-4" class="main__item">
-        <h2 class="main__item-title">Here is a title!</h2>
-      </div>
-      <div id="article-5" class="main__item main__item-large">
-        <h2 class="main__item-title">Here is a title!</h2>
-        <div class="main__item-tags">
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
+        <div class="main__item main__item-large main__item-placeholder"></div>
+        <div class="main__item main__item-placeholder"></div>
+        <div id="article-2" class="main__item">
+          <h2 class="main__item-title">Here is a title!</h2>
         </div>
-      </div>
-      <div id="article-6" class="main__item">
-        <h2 class="main__item-title">Here is a title!</h2>
-      </div>
-      <div class="main__item main__item-placeholder"></div>
-      <div class="main__item main__item-horizontal main__item-placeholder"></div>
-      <div id="article-7" class="main__item">
-        <h2 class="main__item-title">Here is a title!</h2>
-      </div>
-      <div id="article-8" class="main__item">
-        <h2 class="main__item-title">Here is a title!</h2>
-      </div>
-      <div id="article-9" class="main__item main__item-large">
-        <h2 class="main__item-title">Here is a title!</h2>
-        <div class="main__item-tags">
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
+        <div id="article-3" class="main__item">
+          <h2 class="main__item-title">Here is a title!</h2>
         </div>
-      </div>
-    </main>
+        <div id="article-4" class="main__item">
+          <h2 class="main__item-title">Here is a title!</h2>
+        </div>
+        <div id="article-5" class="main__item main__item-large">
+          <h2 class="main__item-title">Here is a title!</h2>
+          <div class="main__item-tags">
+            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Tag</h3>
+          </div>
+        </div>
+        <div id="article-6" class="main__item">
+          <h2 class="main__item-title">Here is a title!</h2>
+        </div>
+        <div class="main__item main__item-placeholder"></div>
+        <div class="main__item main__item-horizontal main__item-placeholder"></div>
+        <div id="article-7" class="main__item">
+          <h2 class="main__item-title">Here is a title!</h2>
+        </div>
+        <div id="article-8" class="main__item">
+          <h2 class="main__item-title">Here is a title!</h2>
+        </div>
+        <div id="article-9" class="main__item main__item-large">
+          <h2 class="main__item-title">Here is a title!</h2>
+          <div class="main__item-tags">
+            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Tag</h3>
+          </div>
+        </div>
+      </main>
+    </div>
     <!-- END MAIN-->
 
     <!-- START FOOTER -->
