--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       <img class="header__logo" src="assets/Logo_PNGJAUNE.png" alt="" />
       <div class="header__title">
         <h1 class="header__title-H1-color header__title_box1">Main Article Title</h1>
-        <h3 class="header__title-H3-color header__title_box2">#TAG #TAG1 #TAG2</h3>
+        <ul class="header__tags">
+          <li class="header__tag">#TAG</li>
+          <li class="header__tag">#TAG</li>
+          <li class="header__tag">#TAG</li>
+        </ul>
+        <!-- <h3 class="header__title-H3-color header__title_box2">#TAG #TAG1 #TAG2</h3> -->
       </div>
     </header>
     <div class="header__brackground"></div>
