--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     <!--START NAV -->
 
 
+    
+  <nav class="navbar-row">
+    <div class="column left">a</div>
+    <div class="column middle">  
+      <span class="item">logo</span>
+    </div>
+    <div class="column right">a</div>
+  </nav>
 
-    <nav>
-      <img src="" alt="" ><img>
-      <ul>
-        <li><a href="https://www.facebook.com/Techiteasybxl">Facebook</a></li>
-        <li><a href="https://twitter.com/Techiteasybxl"> twitter</a></li>
-        <li><a href="http://">Instagram</a></li>
-      </ul>
-    </nav>
+
 
     <!-- END NAV -->
 
