--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
 
     
   <nav class="navbar-row">
-    <div class="column left">a</div>
+    
     <div class="column middle">  
-      <span class="item">logo</span>
+      <span class="item">LOGO</span>
     </div>
-    <div class="column right">a</div>
+    <div class="column right">
+      <ul class="nav-social">
+        <li>
+          <a href="https://www.facebook.com/Techiteasybxl" class="assets/i"></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/Techiteasybxl" class="icon"></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/Techiteasybxl/"></a>
+        </li>
+     </ul>
+    </div>
   </nav>
 
 
