--- a/index.html
+++ b/index.html
@@ -14,50 +14,31 @@
       integrity="sha384-OLYO0LymqQ+uHXELyx93kblK5YIS3B2ZfLGBmsJaUyor7CpMTBsahDHByqSuWW+q"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
     <!--START NAV -->
 
-
-    
-  <nav class="navbar-row">
-    
-    <div class="column middle">  
-      <span class="item">LOGO</span>
-    </div>
-    <div class="column right">
-      <ul class="nav-social">
-        <li>
-          <a href="https://www.facebook.com/Techiteasybxl" class="assets/i"></a>
-        </li>
-        <li>
-          <a href="https://twitter.com/Techiteasybxl" class="icon"></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/Techiteasybxl/"></a>
-        </li>
-     </ul>
-    </div>
-  </nav>
-
-
+    <nav class="navbar-row">
+      <div class="column middle">
+        <span class="item">LOGO</span>
+      </div>
+      <div class="column right">
+        <ul class="nav-social">
+          <li>
+            <a href="https://www.facebook.com/Techiteasybxl" class="assets/i"></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/Techiteasybxl" class="icon"></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/Techiteasybxl/"></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <!-- END NAV -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- START HEADER-->
     <header class="header">
