--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <!-- START HEADER-->
-    <header class="header">
+    <header class="header" id= "header">
       <img class="header__logo" src="assets/Logo_PNGJAUNE.png" alt="" />
       <div class="header__title">
         <h1 class="header__title-H1-color header__title_box1">Main Article Title</h1>
