--- a/article/article.html
+++ b/article/article.html
@@ -22,7 +22,7 @@
      <img class="image-logo" src="../assets/Logo_PNGJAUNE.png  " alt="LOGO" srcset="">
     </div> 
 
-     <ul class="social-navbar">
+     <ul class="navbar-nav">
        <li class="social-image" >
          <a href="https://www.facebook.com/Techiteasybxl">
          <img class="navbar-image" src="../assets/Facebook_icon-icons.com_66805.png" alt="Facebook" srcset="">
