--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   </head>
   <body>
     <!--START NAV -->
-    <nav class="navbar-row">
+    <nav class="navbar navbar-expand-sm" id="navbar">
       <div class="logo">
         <img class="image-logo" src="assets/Logo_PNGJAUNE.png  " alt="LOGO" srcset="" />
       </div>
 
-      <ul class="social-navbar">
-        <li class="social-image">
-          <a href="https://www.facebook.com/Techiteasybxl">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class ="nav-link" href="https://www.facebook.com/Techiteasybxl">
             <img
               class="navbar-image"
               src="assets/Facebook_icon-icons.com_66805.png"
@@ -44,8 +44,8 @@
             />
           </a>
         </li>
-        <li class="social-image">
-          <a href="https://twitter.com/Techiteasybxl" class="icon">
+        <li class="nav-item">
+          <a class ="nav-link" href="https://twitter.com/Techiteasybxl" class="icon">
             <img
               class="navbar-image"
               src="assets/5294-twitter-i_102511 (1).png"
@@ -54,8 +54,8 @@
             />
           </a>
         </li>
-        <li class="social-image">
-          <a href="https://www.instagram.com/Techiteasybxl/">
+        <li class="nav-item">
+          <a class ="nav-link" href="https://www.instagram.com/Techiteasybxl/">
             <img
               class="navbar-image"
               src="assets/3721672-instagram_108066 (1).png"
@@ -86,7 +86,7 @@
 
     <!-- START MAIN-->
     <div class="main__wrapper">
-      <main class="main">
+      <main class= "main" id = "main">
         <div id="article-1" class="main__item main__item-large">
           <h2 class="main__item-title">Here is a title!</h2>
           <div class="main__item-tags">
