--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     </footer>
     <!-- END FOOTER -->
 
-    <script src="script.js"></script>
+    <script src="nav.js"></script>
+    <script src="article.js"></script>
   </body>
 </html>
