--- a/article/article.html
+++ b/article/article.html
@@ -4,44 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TIE article</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"/>
+    
+    <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.0/css/all.css"
-      integrity="sha384-OLYO0LymqQ+uHXELyx93kblK5YIS3B2ZfLGBmsJaUyor7CpMTBsahDHByqSuWW+q"
-      crossorigin="anonymous"
-    />
+        <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+        rel="stylesheet"
+      />
+  
+      <!-- ICONS -->
+      <link
+        rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.15.0/css/all.css"
+        integrity="sha384-OLYO0LymqQ+uHXELyx93kblK5YIS3B2ZfLGBmsJaUyor7CpMTBsahDHByqSuWW+q"
+        crossorigin="anonymous"
+      />
+
+      <!-- CSS IMPORTS -->
     <link rel="stylesheet" href="article.css" />
 <body>
-<!--START NAV -->
-<nav class="navbar-row"> 
+  <div>
+    <!--START NAV -->
+    <nav class="navbar navbar-expand-sm" id="navbar">
+      <div class="logo">
+        <img class="image-logo" src="../assets/Logo_PNGJAUNE.png  " alt="LOGO" srcset="" />
+      </div>
 
-    <div class="logo">
-    
-     <img class="image-logo" src="../assets/Logo_PNGJAUNE.png  " alt="LOGO" srcset="">
-    </div> 
-
-     <ul class="navbar-nav">
-       <li class="social-image" >
-         <a href="https://www.facebook.com/Techiteasybxl">
-         <img class="navbar-image" src="../assets/Facebook_icon-icons.com_66805.png" alt="Facebook" srcset="">
-         </a>
-       </li>
-       <li class="social-image">
-         <a href="https://twitter.com/Techiteasybxl" class="icon">
-         <img class="navbar-image" src="../assets/5294-twitter-i_102511 (1).png" alt="Twitter" srcset="">
-         </a>
-       </li>
-       <li class="social-image">
-         <a href="https://www.instagram.com/Techiteasybxl/">
-         <img class="navbar-image" src="../assets/3721672-instagram_108066 (1).png" alt="Instagram" srcset="">
-         </a>
-       </li>
-    </ul>
- </nav>
-
-<!-- END NAV -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.facebook.com/Techiteasybxl">
+            <img
+              class="navbar-image"
+              src="../assets/Facebook_icon-icons.com_66805.png"
+              alt="Facebook"
+              srcset=""
+            />
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://twitter.com/Techiteasybxl" class="icon">
+            <img
+              class="navbar-image"
+              src="../assets/5294-twitter-i_102511 (1).png"
+              alt="Twitter"
+              srcset=""
+            />
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.instagram.com/Techiteasybxl/">
+            <img
+              class="navbar-image"
+              src="../assets/3721672-instagram_108066 (1).png"
+              alt="Instagram"
+              srcset=""
+            />
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- END NAV -->
 <!-- START HEADER -->
 <div class="main__wrapper">
     <div>
@@ -86,5 +108,7 @@
 <!-- END NEWSLETTER -->
 </div>
 <!-- START FOOTER -->
+</div>
+<script src="scroll.js"></script>
 </body>
 </html>
