--- a/article/article.html
+++ b/article/article.html
@@ -67,7 +67,7 @@
 <!-- START HEADER -->
 <div class="main__wrapper">
     <div>
-        <img src="../assets/article-1.jpg" alt="article test">
+        <img class="hero-image" src="../assets/article-1.jpg" alt="article test">
     </div>
 <!-- END HEADER -->
 <!-- START ARTICLE -->
