--- a/article/article.html
+++ b/article/article.html
@@ -85,8 +85,30 @@
     </article>
     </div>
 <!-- END ARTICLE  -->
+<!-- SOCIAL NET BUTTONS START -->
+<div>
+  <ul class="social">
+    <li class="social__buttons">
+      <a href="#">
+        <img class="navbar-image" src="../assets/Facebook_icon-icons.com_66805.png" alt="Facebook" srcset=""/>
+      </a>
+    </li>
+    <li class="social__buttons">
+      <a href="#">
+        <img class="navbar-image" src="../assets/5294-twitter-i_102511 (1).png" alt="Twitter" srcset=""/>
+      </a>
+    </li>
+    <li class="social__buttons">
+      <a href="#">
+        <img class="navbar-image" src="../assets/3721672-instagram_108066 (1).png" alt="Instagram" srcset=""/>
+      </a>
+    </li>
+  </ul>
+</div>
+
+<!-- SOCIAL NET BUTTONS END -->
 <!-- STRAT NEWSLETTER -->
-    <div>
+    <div class="form">
         <form>
             <div class="form__container">
               <h2 class="h2__color">Subscribe to our Newsletter</h2>
@@ -108,11 +130,7 @@
 <!-- END NEWSLETTER -->
 </div>
 <!-- START FOOTER -->
-<<<<<<< HEAD
-<script src="../script.js"></script>
-=======
 </div>
 <script src="scroll.js"></script>
->>>>>>> 60802569462611fa0eb5e36f869d9903c1880cf1
 </body>
 </html>
