--- a/article/article.html
+++ b/article/article.html
@@ -75,11 +75,11 @@
     <article>
         <h1 class="main__item-title">Title</h1>
     
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo molestias natus deleniti fugit quaerat ipsa ducimus at cumque tempore beatae et, quos exercitationem cupiditate necessitatibus, quasi commodi debitis. Voluptatum!
+    <p> <span class="article__text-first-letter">L</span>orem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo molestias natus deleniti fugit quaerat ipsa ducimus at cumque tempore beatae et, quos exercitationem cupiditate necessitatibus, quasi commodi debitis. Voluptatum!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore voluptatem laborum necessitatibus, voluptate perferendis dolorum nam officiis sunt doloribus nihil eos accusantium nemo, ut, repellendus repudiandae! Ullam suscipit laudantium nostrum.
     </p>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tenetur labore, autem temporibus dolorem non harum velit fugit accusamus ullam, similique blanditiis numquam doloremque modi necessitatibus dicta! Ipsa, assumenda placeat.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tenetur labore, autem temporibus dolorem non harum velit fugit accusamus ullam, similique blanditiis numquam doloremque modi necessitatibus dicta! Ipsa, assumenda placeat.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi beatae similique nisi, vero tenetur rerum, quibusdam qui sequi nihil culpa magnam tempora eaque at aperiam officia. Quidem unde dicta incidunt.
     </p>
     </article>
