--- a/article/article.html
+++ b/article/article.html
@@ -23,6 +23,7 @@
       <!-- CSS IMPORTS -->
     <link rel="stylesheet" href="article.css" />
 <body>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v8.0" nonce="tbUnnBZM"></script>
   <div>
     <!--START NAV -->
     <nav class="navbar navbar-expand-sm" id="navbar">
@@ -89,8 +90,8 @@
 <div>
   <ul class="social">
     <li class="social__buttons">
-      <a href="#">
-        <img class="navbar-image" src="../assets/Facebook_icon-icons.com_66805.png" alt="Facebook" srcset=""/>
+      <a data-href="https://www.facebook.com/Techiteasybxl" data-layout="button" data-size="large" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FTechiteasybxl&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+        <img class="navbar-image" src="../assets/Facebook_icon-icons.com_66805.png" alt="Facebook"/>
       </a>
     </li>
     <li class="social__buttons">
