--- a/article/article.html
+++ b/article/article.html
@@ -71,7 +71,7 @@
     </div>
 <!-- END HEADER -->
 <!-- START ARTICLE -->
-    <div>
+    <div id="article">
     <article>
         <h1 class="main__item-title">Title</h1>
     
