--- a/article/article.html
+++ b/article/article.html
@@ -66,7 +66,7 @@
     </nav>
     <!-- END NAV -->
 <!-- START HEADER -->
-<div class="main__wrapper">
+<div class="main__wrapper header__marginTop">
     <div>
         <img class="hero-image" src="../assets/article-1.jpg" alt="article test">
     </div>
@@ -74,19 +74,21 @@
 <!-- START ARTICLE -->
     <div id="article">
     <article>
-        <h1 class="main__item-title">Title</h1>
+        <h1 class="main__item-title">Trade wars, cyber wars and spy wars</h1>
 
         <div class="main__item-tags">
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
-          <h3 class="main__item-tag">#Tag</h3>
+          <h3 class="main__item-tag">#cyberwar</h3>
+          <h3 class="main__item-tag">#spy</h3>
+          <h3 class="main__item-tag">#silicon valley</h3>
         </div>
-     <p> <span class="article__text-first-letter">L</span>orem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo molestias natus deleniti fugit quaerat ipsa ducimus at cumque tempore beatae et, quos exercitationem cupiditate necessitatibus, quasi commodi debitis. Voluptatum!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore voluptatem laborum necessitatibus, voluptate perferendis dolorum nam officiis sunt doloribus nihil eos accusantium nemo, ut, repellendus repudiandae! Ullam suscipit laudantium nostrum.
+     <p> <span class="article__text-first-letter">I</span>t’s been generation since the world enjoyed political certainty with the fall of communism and economic uncertainty with the rise of the Internet.
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tenetur labore, autem temporibus dolorem non harum velit fugit accusamus ullam, similique blanditiis numquam doloremque modi necessitatibus dicta! Ipsa, assumenda placeat.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi beatae similique nisi, vero tenetur rerum, quibusdam qui sequi nihil culpa magnam tempora eaque at aperiam officia. Quidem unde dicta incidunt.
+      Today, the tables are turned, as major economies enjoy more certainty than they’ve had in years while most of their governments are in the midst of something quite different.
+      With markets setting new records this year, before the recent correction, the geopolitical tremors of 2018 are shaping up to be the most concerning risks to growth. Can the discordant trends continue?
+    </p>
+    <p>
+      RBC Capital Markets hosted the Point of View Conference 2018 to explore the year’s most disruptive trends and how they’re reshaping the global outlook. Inflation, cyberattacks and the persistence of populism were big concerns. Yet nearly half the audience, in a live mobile poll, thought trade wars and tariffs pose the biggest risks to growth.
     </p>
     </article>
     </div>
