--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     <header class="header" id="header">
       <img class="header__logo" src="assets/Logo_PNGJAUNE.png" alt="" />
       <div class="header__title">
-        <h1 class="header__title-H1-color header__title_box1">Main Article Title</h1>
+        <h1 class="header__title-H1-color header__title_box1">Burning Man: a cyberpunk world</h1>
         <ul class="header__tags">
-          <li class="header__tag">#Tag</li>
-          <li class="header__tag">#Tag</li>
-          <li class="header__tag">#Tag</li>
+          <li class="header__tag">#Festival</li>
+          <li class="header__tag">#Music</li>
+          <li class="header__tag">#cyberpunk</li>
         </ul>
         <!-- <h3 class="header__title-H3-color header__title_box2">#TAG #TAG1 #TAG2</h3> -->
       </div>
@@ -84,49 +84,49 @@
     <div class="main__wrapper">
       <main class="main" id="main">
         <div id="article-1" class="main__item main__item-large">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">Trade wars, cyber wars and spy wars</h2>
           <div class="main__item-tags">
-            <h3 class="main__item-tag">#Tag</h3>
-            <h3 class="main__item-tag">#Tag</h3>
-            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#cyberwar</h3>
+            <h3 class="main__item-tag">#spy</h3>
+            <h3 class="main__item-tag">#silicon valley</h3>
           </div>
         </div>
         <div class="main__item main__item-large main__item-placeholder"></div>
         <div class="main__item main__item-placeholder"></div>
         <div id="article-2" class="main__item">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">HoloLens 2 Hands-On</h2>
         </div>
         <div id="article-3" class="main__item">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">e-Learning</h2>
         </div>
         <div id="article-4" class="main__item">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">React Native.Js vs Flutter</h2>
         </div>
         <div id="article-5" class="main__item main__item-large">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">Nomad coder: new market</h2>
           <div class="main__item-tags">
-            <h3 class="main__item-tag">#Tag</h3>
-            <h3 class="main__item-tag">#Tag</h3>
-            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#coder</h3>
+            <h3 class="main__item-tag">#nomadLife</h3>
+            <h3 class="main__item-tag">#programming</h3>
           </div>
         </div>
         <div id="article-6" class="main__item">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">VR Design</h2>
         </div>
         <div class="main__item main__item-placeholder"></div>
         <div class="main__item main__item-horizontal main__item-placeholder"></div>
         <div id="article-7" class="main__item">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">Remote work?</h2>
         </div>
         <div id="article-8" class="main__item">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">Vitamin D for Covid-19</h2>
         </div>
         <div id="article-9" class="main__item main__item-large">
-          <h2 class="main__item-title">Here is a title!</h2>
+          <h2 class="main__item-title">Algorithms in JavaScript</h2>
           <div class="main__item-tags">
-            <h3 class="main__item-tag">#Tag</h3>
-            <h3 class="main__item-tag">#Tag</h3>
-            <h3 class="main__item-tag">#Tag</h3>
+            <h3 class="main__item-tag">#Js</h3>
+            <h3 class="main__item-tag">#code</h3>
+            <h3 class="main__item-tag">#math</h3>
           </div>
         </div>
       </main>
